Update main text in index.html
Acertos nos textos

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
             
             <div class="text-container">
-                <h1 class="main-text"><b>Em breve...</b></h1>
-                <h1 class="main-text">Itens de costura e bordados personalizados para você!</h1>
-                <h1 class="main-text">Para presentear com Arte, Criatividade e muito <b>Amor</b>.</h1>
+                <h1 class="main-text"><b>Faça sua encomenda!</b></h1>
+                <h1 class="main-text">Vários itens de costura e bordados personalizados!</h1>
+                <h1 class="main-text">Para você presentear com Arte exclusiva, Criatividade e muito <b>Amor</b>.</h1>
             </div>
             
             <div class="buttons-container">
